--- a/RazorReact.AspNet/packages.config
+++ b/RazorReact.AspNet/packages.config
@@ -2,11 +2,12 @@
 <packages>
   <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net461" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.Core" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
