--- a/RazorReact.AspNetSample/packages.config
+++ b/RazorReact.AspNetSample/packages.config
@@ -5,6 +5,8 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net461" />
   <package id="JavaScriptEngineSwitcher.ChakraCore" version="3.4.4" targetFramework="net461" />
   <package id="JavaScriptEngineSwitcher.Core" version="3.3.0" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.V8" version="3.3.1" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.V8.Native.win-x86" version="3.3.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
@@ -23,7 +25,6 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-preview.1.20120.5" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="5.0.0-preview.1.20120.5" targetFramework="net461" />
-  <package id="System.Text.Json" version="4.7.1" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
